Fixing Apple's San Francisco font usage

--- a/src/banner.css
+++ b/src/banner.css
@@ -6,7 +6,7 @@
   background: #ffe155;
   padding: 5px 0;
   color: #5b4e1a !important;
-  font-family: "San Francisco", "Helvetica Neue", "Helvetica", Arial, sans-serif !important;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", Arial, sans-serif !important;
   border-bottom:1px solid #e8bf1d;
 }
 
